# carnd_projects

./: .gitignore  README.md  techstack.md  techstack.yml
02.project.traffic.signs/: Traffic_Sign_Classifier.html  Traffic_Sign_Classifier.ipynb
02.project.traffic.signs.python_code/: README.md  model.run.py  moder.verify.py  prepare.data.py
02.project.traffic.signs.python_code/helpers/: build_network.py  conv_network.py  fileio.py  image_handling.py  plotting.py  various.py
02.project.traffic.signs/.ipynb_checkpoints/: Traffic_Sign_Classifier-checkpoint.ipynb
02.project.traffic.signs/project.data.checkpoints/: checkpoint  traffic-40.index
03.project.behavioral.cloning/: README.md  drive.py  model.json  model.py
03.project.behavioral.cloning/helpers/: data_handling.py  global_variables.py  image_handling.py  model_api.py  sample_models.py
04.advanced.lane.finding/: README.md  calibration.p  main.py
04.advanced.lane.finding/helpers/: camera.py  experimentalSideOperator.py  global_variables.py  imagetools.py  lanesManager.py  overlayManager.py  plottingHelpers.py  roadManager.py
05.vechicle.tracking/: README.md  image.pipeline.py  main.py  train_svm.py
05.vechicle.tracking/helpers/: camera.py  car_tracker.py  cars_detector.py  experimentalSideOperator.py  global_variables.py  imagetools.py  plotting.py
05.vechicle.tracking/models/: scv_data_scaler.p  svc.p  svc_calibrated.p
06.extended.kalman.filter/: .gitignore  README.md
06.extended.kalman.filter/src/: FusionEKF.cpp  FusionEKF.h  kalman_filter.cpp  kalman_filter.h  main.cpp  tools.cpp  tools.h
07.unscented.kalman.filter/: README.md
07.unscented.kalman.filter/src/: main.cpp  ukf.cpp  ukf.h
08.kidnapped.vehicle/src/: helper_functions.h  particle_filter.cpp
09.pid.control/: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
09.pid.control/src/: PID.cpp  PID.h  main.cpp
10.project.mpc/: CMakeLists.txt  README.md
10.project.mpc/src/: MPC.cpp  json.hpp  main.cpp
11.path.planning/: CMakeLists.txt  CMakeSettings.json  build.cmake  build.ps1
11.path.planning/include/: constants.h  discreteCurves.h  json.hpp  navigator.h  planner.h  polynomial.h  road.h  tools.h  trajectoryGenerator.h  various_structs.h  vehicle.h
11.path.planning/src/: CMakeLists.txt  constants.h  discreteCurves.cpp  discreteCurves.h  main.cpp  navigator.cpp  planner.cpp  planner.h  polynomial.cpp  polynomial.h  road.cpp  road.h  spline.h  tools.cpp  tools.h  trajectoryGenerator.cpp  trajectoryGenerator.h  various_structs.h  vehicle.cpp  vehicle.h
11.path.planning/test/: CMakeLists.txt  main.cpp  test_chain.cpp  test_planner.cpp  test_polynomial.cpp  test_road.cpp  test_splines.cpp  test_trajectories.cpp  test_vehicle.cpp
11.path.planning/utils/: highway_vis.py  splines.csv
